# The-Great-Escape-in-C

./: .astylerc  .editorconfig  .gitignore  .splintrc  .travis.yml  .ycm_extra_conf.py  BUGS.md  CMakeLists.txt  CONVERSION.md  MakefileRO,fe1  NOTES.md  README.md  Rename,feb  TODO.md  build-riscos.sh  build.sh  riscos-ci-build.sh
.github/workflows/: ci.yml
cmake/: riscos.cmake
cmake/Modules/: MacOSXBundleInfo.plist.in
include/C99/: Types.h
include/TheGreatEscape/: TheGreatEscape.h
include/ZXSpectrum/: Kempston.h  Keyboard.h  Screen.h  Spectrum.h  ZXSpectrum.h
include/speccy/: speccy.h
libraries/TheGreatEscape/: CMakeLists.txt  Create.c  Debug.c  ExteriorTiles.c  Font.c  Input.c  InteriorObjectDefs.c  InteriorTiles.c  ItemBitmaps.c  Main.c  Map.c  Masks.c  Menu.c  Messages.c  Music.c  RoomDefs.c  Screen.c  SpriteBitmaps.c  Sprites.c  StaticGraphics.c  StaticTiles.c  SuperTiles.c  Text.c  TheGreatEscape.c
libraries/TheGreatEscape/Data/: ExteriorTiles.c  Font.c  InteriorObjectDefs.c  InteriorTiles.c  ItemBitmaps.c  Map.c  Masks.c  Music.c  RoomDefs.c  SpriteBitmaps.c  Sprites.c  StaticGraphics.c  StaticTiles.c  SuperTiles.c
libraries/TheGreatEscape/Engine/: Create.c  Debug.c  Events.c  Input.c  Main.c  Menu.c  Messages.c  Screen.c  Text.c  Utils.c  Zoombox.c
libraries/TheGreatEscape/Extend/: Save.c
libraries/TheGreatEscape/include/TheGreatEscape/: Asserts.h  Debug.h  Doors.h  Events.h  ExteriorTiles.h  Font.h  Input.h  InteriorObjectDefs.h  InteriorObjects.h  InteriorTiles.h  ItemBitmaps.h  Items.h  Main.h  Map.h  Masks.h  Menu.h  Messages.h  Music.h  Pixels.h  RoomDefs.h  Rooms.h  Routes.h  Screen.h  SpriteBitmaps.h  Sprites.h  State.h  StaticGraphics.h  StaticTiles.h  SuperTiles.h  TGEObject.h  Text.h  Tiles.h  Types.h  Utils.h  Zoombox.h
libraries/ZXSpectrum/: CMakeLists.txt  Kempston.c  Keyboard.c  Screen.c  Spectrum.c  ZXScreen.c  ZXScreen.h  ZXSpectrum.c
libraries/ZXSpectrum/include/ZXSpectrum/: Macros.h
platform/generic/: CMakeLists.txt  Makefile  SDL.mk  build-emscripten-sdl.sh  build-emscripten.sh  build-osx-debug-sdl.sh  build-osx-native-release.sh  main.c  sdlmain.c
platform/osx/: AppDelegate.h  AppDelegate.m  CMakeLists.txt  TheGreatEscape-Info.plist  TheGreatEscape-Prefix.pch  TheGreatEscapeView.h  TheGreatEscapeView.m  ZXGameView.h  ZXGameView.m  ZXGameWindow.h  ZXGameWindow.m  ZXGameWindowController.h  ZXGameWindowController.m  bitfifo.c  bitfifo.h  main.m  speckey.c  speckey.h
platform/osx/TheGreatEscape.xcodeproj/: project.pbxproj
platform/osx/TheGreatEscape.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
platform/osx/TheGreatEscape.xcodeproj/xcshareddata/xcschemes/: Debug.xcscheme  Release.xcscheme
platform/osx/TheGreatEscape/Images.xcassets/AppIcon.appiconset/: Contents.json
platform/osx/en.lproj/: Credits.rtf  MainMenu.xib  ZXGameWindow.xib
platform/riscos/: CMakeLists.txt
platform/riscos/!GtEscape/: !Boot,feb  !Help  !Help,feb  !Run,feb  !RunDF,feb  !Sprites,ff9  !Sprites22,ff9  AppEngine,ffa  CMakeLists.txt  MakeClean,fd7  MakeMake,fd7  Spritebits,ff9  TODO  TemplateMF  TimerMod,ffa  bitfifo.c  dataxfer.c  dataxfer.h  globals.c  globals.h  iconbar.c  iconbar.h  main.c  menunames.h  poll.c  poll.h  ssbuffer.h  timermod.c  timermod.h  zxgame.c  zxgame.h  zxgames.c  zxgames.h  zxsave.c  zxsave.h  zxscale.c  zxscale.h
platform/riscos/!GtEscape/Release/: MkRelease,feb
platform/riscos/!GtEscape/Release/!System/350/Modules/: SSBuffer,ffa  StreamMan,ffa
platform/riscos/!GtEscape/Resources/: Sprites,ff9
platform/riscos/!GtEscape/Resources/UK/: !Help  Instruct  Messages  Templates,fec
platform/riscos/!GtEscape/c/: iconbar  main  poll  zxgame
platform/riscos/!GtEscape/h/: globals  menunames  poll  zxgame  zxscale
platform/riscos/Package/RiscPkg/: Control  Copyright
platform/riscos/Release/: MkRelease,feb  ReadMe
platform/riscos/c/: main
platform/windows/: CMakeLists.txt
platform/windows/TheGreatEscape/: TheGreatEscape.sln  TheGreatEscape.vcxproj  TheGreatEscape.vcxproj.filters
platform/windows/TheGreatEscapeApp/: Resource.rc  TheGreatEscapeApp.vcxproj  TheGreatEscapeApp.vcxproj.filters  main.cpp  resource.h
platform/windows/ZXSpectrum/: ZXSpectrum.vcxproj  ZXSpectrum.vcxproj.filters
scripts/certs/: dist.cer  dist.p12
