add_library(LibTheGreatEscape
  Data/ExteriorTiles.c
  Data/Font.c
  Data/InteriorObjectDefs.c
  Data/InteriorTiles.c
  Data/ItemBitmaps.c
  Data/Map.c
  Data/Masks.c
  Data/Music.c
  Data/RoomDefs.c
  Data/SpriteBitmaps.c
  Data/Sprites.c
  Data/StaticGraphics.c
  Data/StaticTiles.c
  Data/SuperTiles.c
  Engine/Create.c
  Engine/Debug.c
  Engine/Events.c
  Engine/Input.c
  Engine/Main.c
  Engine/Menu.c
  Engine/Messages.c
  Engine/Screen.c
  Engine/Text.c
  Engine/Utils.c
  Engine/Zoombox.c
)

target_include_directories(LibTheGreatEscape
  PUBLIC
  ../../include/
)

target_include_directories(LibTheGreatEscape
  PRIVATE
  include/
)
